--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -1395,9 +1395,15 @@
 		<div class="clear"></div>
 		<div class="input_el">
 			<select name="partner" id="search_partner" class="input_smoke search_field">
-				<option value="">Partner Organization</option>
+				<option>Partner Organization</option>
+				<option value="AVAP">AVAP</option>
 				<option value="Caritas">Caritas</option>
 				<option value="FODEP">FODEP</option>
+				<option value="OYV">OYV</option>
+				<option value="SACCORD">SACCORD</option>
+				<option value="TI-Z">TI-Z</option>
+				<option value="YWA">YWA</option>
+				<option value="ZNWL">ZNWL</option>
 			</select>
 		</div>
 		<div class="input_el">
