allowing for filtering contacts by role and sending messages to copy list

--- a/zambia/templates/zambia/templates.html
+++ b/zambia/templates/zambia/templates.html
@@ -1409,6 +1409,15 @@
 		<div class="input_el"><input type="text" name="location" class="input_smoke" id="location__id" placeholder="Location" style="width:30.5em"></div>
 		<div class="clear"></div>
 		<div class="input_el">
+			<select name="role" id="search_role__name" class="input_smoke search_field">
+				<option value=''>Monitor Role</option>
+				<option value='Monitor'>Monitor</option>
+				<option value='District Supervisor'>District Supervisor</option>
+				<option value='Provincial Supervisor'>Provincial Supervisor</option>
+				<option value='Constituency Supervisor'>Constituency Supervisor</option>
+			</select>
+		</div>
+		<div class="input_el">
 			<select name="partner" id="search_partner" class="input_smoke search_field">
 				<option value="">Partner Organization</option>
 				<option value="AVAP">AVAP</option>
