--- a/webapp/templates/webapp/templates.html
+++ b/webapp/templates/webapp/templates.html
@@ -50,6 +50,12 @@
 <script type="text/x-handlebars-template" id="message-empty-template" charset="utf-8">
 	<tr><td colspan="5" class="empty"><em>No messages to display</em></td></tr>
 </script>
+<script type="text/x-handlebars-template" id="error-dialog-template" charset="utf-8">
+	<div class="fb_dialog">
+		<p>An error occured while performing this operation<br />Please cross-check your input and try again</p>
+		<div class="fb_ok_button"><span class="btn_blue btn_space"><a href="javascript:;" id="ok_btn">OK</a><span></span></span></div>
+	</div>
+</script>
 <script type="text/x-handlebars-template" id="sms-blaster-template" charset="utf-8">
 	<div id="sms">
 		<table>
@@ -65,7 +71,7 @@
 		}
 	});
 	
-	Templates = (typeof(Templates) == 'undefined') ? {} : Templates;
+	Templates = (typeof(Templates) === 'undefined') ? {} : Templates;
 	Templates.Screen = Handlebars.compile($('#screen-template').html());
 	Templates.DashboardScreen = Handlebars.compile($('#screen-dashboard-template').html());
 	Templates.MessageSearch = Handlebars.compile($('#message-search-template').html());
@@ -73,4 +79,5 @@
 	Templates.MessageEmpty = Handlebars.compile($('#message-empty-template').html());
 	Templates.MessageHeader = Handlebars.compile($('#message-header-template').html());
 	Templates.SMSBlaster = Handlebars.compile($('#sms-blaster-template').html());
+	Templates.ErrorDialog = Handlebars.compile($('#error-dialog-template').html());
 </script>
